/* (c) https://github.com/MontiCore/monticore */
import org.gradle.api.tasks.testing.logging.TestExceptionFormat
import org.gradle.api.tasks.testing.logging.TestLogEvent

buildscript {
    dependencies {
        classpath "de.se_rwth.commons:se-commons-gradle:$se_commons_version"
    }
}

plugins {
    id "java-library"
    id "io.github.themrmilchmann.ecj" version "0.2.0" // Eclipse compiler as it's much faster than javac
    id "com.gradleup.shadow" version "$shadow_plugin_version"
    id 'maven-publish'
    id "jacoco"
}

description = 'MontiCore: Generator'


ext.grammarDir = 'src/main/grammars'

ecj {
    compilerVersion = "3.44.0"
}

allprojects {
  group = "de.monticore"
  layout.buildDirectory = layout.projectDirectory.dir("target")
  repositories {
    if (("true").equals(getProperty('useLocalRepo'))) {
      mavenLocal()
    }
    maven {
      url = repo
    }
    mavenCentral()
  }
}

dependencies {
    implementation "de.monticore:monticore-grammar:$previous_mc_version"
    implementation "de.se_rwth.commons:se-commons-groovy:$se_commons_version"
    implementation "de.se_rwth.commons:se-commons-logging:$se_commons_version"
    implementation "de.se_rwth.commons:se-commons-gradle:$se_gradle_version"

    implementation "org.apache.commons:commons-lang3:$commons_lang3_version"
    implementation "org.freemarker:freemarker:$freemarker_version"
    implementation "commons-cli:commons-cli:$commons_cli_version"
    implementation "org.apache.commons:commons-text:$commons_text_version"

//  implementation 'org.slf4j:slf4j-api:1.7.10'
    implementation 'ch.qos.logback:logback-classic:[1.2.9,1.3.0)' // we appear to be incompatible with logback >= 1.3.0
    implementation 'ch.qos.logback:logback-core:[1.2.9,1.3.0)'

    implementation "de.monticore.lang:cd4analysis:$cd4a_version"
    implementation "org.antlr:antlr4:$antlr_version"
    implementation "org.apache.groovy:groovy:$groovy_version"
    implementation "com.google.guava:guava:$guava_version"
    implementation "com.github.spotbugs:spotbugs-annotations:$spotbugs_annotations_version"
    implementation "org.apache.commons:commons-lang3:$commons_lang3_version"
    testImplementation 'com.github.javaparser:javaparser-symbol-solver-core:3.24.2'
    testImplementation "org.mockito:mockito-core:$mockito_version"

}
allprojects {
    apply plugin: "java"
    tasks.withType(JavaCompile).configureEach {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
        options.encoding = "UTF-8"
        options.deprecation = false
        options.warnings = false
    }
    java {
        withSourcesJar()
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }
    dependencies {
        testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_version"
        testImplementation "org.junit.jupiter:junit-jupiter-engine:$junit_version"
        testRuntimeOnly "org.junit.platform:junit-platform-launcher:$junit_version"
    }


    tasks.withType(Test).configureEach {
        useJUnitPlatform()

        testLogging {
            // controls whether test output is shown
            showStandardStreams = !("false").equals(getProperty('showTestOutput'))
            showExceptions = true
            showCauses = true
            showStackTraces = true
            exceptionFormat = TestExceptionFormat.FULL
            info {
                events TestLogEvent.FAILED,
                        TestLogEvent.PASSED,
                        TestLogEvent.SKIPPED,
                        TestLogEvent.STANDARD_OUT
            }
        }
        addTestListener(new TestListener() {
            void afterTest(TestDescriptor testDescriptor, TestResult result) {
                logger.lifecycle "${testDescriptor.getClassName()} > ${testDescriptor.parent && testDescriptor.parent.getName() != testDescriptor.getClassName() ? testDescriptor.parent.getName() + " " + testDescriptor.getDisplayName() : testDescriptor.getName()} ${result.resultType}"
            }

            void afterSuite(TestDescriptor suite, TestResult result) {
                if (!suite.parent) { // will match the outermost suite
                    def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
                    def startItem = '|  ', endItem = '  |'
                    logger.lifecycle startItem + output + endItem
                }
            }

            // Required for Gradle version < 9.x
            void beforeSuite(TestDescriptor suite) {
            }

            void beforeTest(TestDescriptor testDescriptor) {
            }
        })

        reports {
            html.required = false
        }
    }

    publishing {
        // The gradle-plugin plugin deploys automatically a pluginMaven publication (from the main component)
        repositories {
            maven {
                name = "SE-Nexus"
                credentials.username = mavenUser
                credentials.password = mavenPassword
                def releasesRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-releases/"
                def snapshotsRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-snapshots/"
                url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
            }
            // Also publish to the github repository, if run on a github action
            if (System.getenv("GITHUB_REPOSITORY") != null) {
                maven {
                    name = "GitHubPackages"
                    url = "https://maven.pkg.github.com/" + System.getenv("GITHUB_REPOSITORY")
                    credentials {
                        username = System.getenv("GITHUB_ACTOR")
                        password = System.getenv("GITHUB_TOKEN")
                    }
                }
            }
        }
        // Add the license information to the publication
        publications.configureEach {
            pom {
                licenses {
                    license {
                        name = 'MontiCore 3-Level License Model'
                        url = 'https://monticore.github.io/monticore/00.org/Licenses/LICENSE-MONTICORE-3-LEVEL/'
                    }
                }
            }
        }

    }
}
publishing {
  publications {
    "maven"(MavenPublication) {
      // the gradle plugin is published implicitly via the java-gradle-plugin plugin
      // but the generator has to be published explicitly
      from components.java
    }
  }
}

tasks.named("shadowJar") { // all in one jar
    manifest {
        attributes "Main-Class": "de.monticore.cli.MontiCoreTool"
    }
    archiveClassifier = "mc-tool"
    zip64 = true
}

tasks.register("buildInfo", de.monticore.gradle.common.MCBuildInfoTask) {
    // With an input property ensuring UP-TO-DATE checks consider the version property
    version = project.version
}

processResources.dependsOn("buildInfo")

// Expose the shadowJar as an artifact for composite builds
artifacts {
  shadow shadowJar
}
configurations {
  shadow {
    outgoing.capability("de.monticore:monticore-generator-shadow:$version")
  }
}
// Ensure the gradle plugin's subproject is also published
['publish', 'publishToMavenLocal', 'assemble', 'check', 'test'].forEach {taskname ->
  tasks.named(taskname).configure {
    dependsOn subprojects*.tasks*.named(taskname)
  }
}
